# SOFTX-D-22-00254

./: AUTHORS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTACTS.md  CONTRIBUTING.md  COPYRIGHT.md  CPPLINT.cfg  LICENSE.md  README.md
.gitlab/: checks.yml  common.yml  configure.yml  coverage.yml  coverage_retrieve.py  deploy.yml  test.yml
apps/: CMakeLists.txt  lifexrun
apps/mesh/: CMakeLists.txt  gmsh_converter.cpp  mesh_info.cpp
apps/vtk_preprocess/: CMakeLists.txt  vtk_preprocess.cpp
doc/: CMakeLists.txt
doc/changes/: v1.4.0_vs_v1.5.0.md
doc/licenses/: ADOL-C.LICENSE  ARPACK-NG.LICENSE  BLACS.LICENSE  Boost.LICENSE  Eigen.LICENSE  FFTW.LICENSE  GLPK.LICENSE  HDF5.LICENSE  HYPRE.LICENSE  METIS.LICENSE  MPICH.LICENSE  MUMPS.LICENSE  NetCDF.LICENSE  OpenBLAS.LICENSE  OpenMPI.LICENSE  PETSc.LICENSE  ParMETIS.LICENSE  ScaLAPACK.LICENSE  Scotch.LICENSE  SuiteSparse.LICENSE  SuperLU.LICENSE  Trilinos.LICENSE  VTK.LICENSE  clipp.LICENSE  cpplint.LICENSE  deal.II.LICENSE  doxygen-awesome-css.LICENSE  generic_factory.LICENSE  oneTBB.LICENSE  p4est.LICENSE
doc/logo/: README.md
doc/pages/: coding-guidelines.hpp  dealii-documentation.hpp  download-and-install.hpp  index.hpp  run.hpp
doc/publications/: README.md  publications.bib
doc/publications/jabref/: lifex_doxygen.begin.layout  lifex_doxygen.layout  lifex_doxygen.misc.layout
doc/references/: README.md  references.bib
doc/references/jabref/: lifex_doxygen.begin.layout  lifex_doxygen.end.layout
doc/style/: lifex.webmanifest
examples/laplace/: CMakeLists.txt  laplace.cpp
examples/multidomain_heat/: CMakeLists.txt  heat.cpp  heat.hpp  multidomain_heat.cpp  multidomain_heat.hpp  multidomain_heat_main.cpp
examples/multidomain_heat_nonlinear/: CMakeLists.txt  heat_nonlinear.cpp  heat_nonlinear.hpp  multidomain_heat_nonlinear.cpp  multidomain_heat_nonlinear.hpp  multidomain_heat_nonlinear_main.cpp
examples/multidomain_stokes/: CMakeLists.txt  multidomain_stokes.cpp  multidomain_stokes.hpp  multidomain_stokes_main.cpp  stokes.cpp  stokes.hpp
examples/vtk_warp_by_fe_function/: CMakeLists.txt  vtk_warp_by_fe_function.cpp
scripts/format/: check_copyright  check_indentation  indent  indent_all  indent_common  pre-commit  static_analysis  update_copyright  update_copyright_common
source/: CMakeLists.txt  command_line_parser.cpp  command_line_parser.hpp  core.cpp  core.hpp  core_model.cpp  core_model.hpp  exceptions.hpp  generic_factory.hpp  init.cpp  init.hpp  lifex.hpp.in  param_handler.cpp  param_handler.hpp  param_handler_helpers.cpp  param_handler_helpers.hpp  quadrature_evaluation.cpp  quadrature_evaluation.hpp
source/geometry/: control_volume.cpp  control_volume.hpp  finders.cpp  finders.hpp  mesh_handler.cpp  mesh_handler.hpp  mesh_info.cpp  mesh_info.hpp  mesh_optimization.cpp  mesh_optimization.hpp  move_mesh.cpp  move_mesh.hpp  rigid_motion.cpp  rigid_motion.hpp
source/io/: CPPLINT.cfg  clipp.hpp  csv_reader.cpp  csv_reader.hpp  csv_test.cpp  csv_test.hpp  csv_writer.cpp  csv_writer.hpp  data_writer.cpp  data_writer.hpp  serialization.cpp  serialization.hpp  vtk_function.cpp  vtk_function.hpp  vtk_preprocess.cpp  vtk_preprocess.hpp  vtk_purkinje_handler.cpp  vtk_purkinje_handler.hpp
source/numerics/: bc_handler.cpp  bc_handler.hpp  fixed_point_acceleration.cpp  fixed_point_acceleration.hpp  interface_handler.cpp  interface_handler.hpp  laplace.cpp  laplace.hpp  linear_solver_handler.cpp  linear_solver_handler.hpp  non_linear_conjugate_gradient.cpp  numbers.cpp  (+17 more)
(+42 files in other folders)
